1999-10-20  Ettore Perazzoli  <ettore@gnu.org>

	* README: Added some info about the `vfs-run' wrapper.

	* configure.in: Subst `@TOP_BUILDDIR@' with the path to the top
	building directory.  Build `$(top_builddir)/test/vfs-run' from
	`$(top_srcdir)/test/vfs-run.in'.

	* test/vfs-run.in (GNOME_VFS_MODULE_PATH): New file.

	* libgnomevfs/gnome-vfs-method.c (gnome_vfs_method_get): Set the
	effective UID/GID to the real UID/GID when loading the module, and
	restore them afterwards.  This should prevent exploits to
	setuid/setgid applications by using `GNOME_VFS_MODULE_PATH'.
	(module_get_sane_handle): Renamed to `load_module'.  Added
	debugging message displaying the complete name of the module that
	is being loaded.

	* libgnomevfs/gnome-vfs-method.c: New variable `module_path_list'.
	(init_hash_table): New helper function.
	(gnome_vfs_method_init): Use it.
	(init_path_list): New helper function to initialize
	`module_path_list' through the `GNOME_VFS_MODULE_PATH' environment
	variable.
	(install_path_list): New helper function used by `init_path_list'.
	(gnome_vfs_method_init): Use it.
	(load_module_in_path_list): New function to search for a module in
	the path list.
	(gnome_vfs_method_get): Use it.
	(module_get_sane_handle): Made const-safe.

1999-10-19  Ettore Perazzoli  <ettore@gnu.org>

	* modules/extfs-method.c (read_directory_list): New parameter
	`info_options'.  If the `GNOME_VFS_FILE_INFO_GETMIMETYPE' bit is
	set, set the MIME type in the file information struct according to
	the file name.
	(do_open_directory): Updated accordingly.

	* modules/ftp-method.c: Do not #include "parse.h" anymore.

	* libgnomevfs/gnome-vfs-cancellation.c [HAVE_CONFIG_H]: #include
	<config.h>.

	* modules/Makefile.am (CPPFLAGS): #define `_GNU_SOURCE'.
	* libgnomevfs-pthread/Makefile.am (CPPFLAGS): Likewise.
	* libgnomevfs-corba/Makefile.am (CPPFLAGS): Likewise.
	* libgnomevfs/Makefile.am (CPPFLAGS): Likewise.

	* modules/extfs-method.c: Implemented directory reading.
